# codex

./: .gitignore  .gitmodules  README.md  flake.nix
.github/workflows/: build.yml
AssemblyScript/fibonacci/: fibo.ts
C/: README.md
C#/: README.md
C#/fibonacci/: Program.cs
C++/: README.md
C++/fibonacci/: fibonacci.cpp
C/fibonacci/: Enarx.toml  fibonacci.c
Go/fibonacci/: go.mod  main.go
Grain/: README.md
Grain/fibonacci/: Enarx.toml  fibonacci.gr
Java/fibonacci/: fibonacci.java
JavaScript/: README.md
JavaScript/fibonacci/: index.js
Multiple/: README.md
Nim/: README.md
Nim/fibonacci/: fibonacci.nimble
Nim/fibonacci/src/: fibonacci.nim
Python/: README.md
Python/fibonacci/: fib.py
Ruby/fibonacci/: fibonacci.rb
Rust/fibonacci/: Cargo.toml
Rust/fibonacci/src/: main.rs
Rust/mio-echo-tcp/: Cargo.toml  Enarx.toml
Rust/simple-tcp-client/: Cargo.toml  README.md
Rust/std-latest/: Cargo.toml  Enarx.toml
Rust/std-latest/.cargo/: config
Rust/std-latest/src/: main.rs
Rust/std-tcp-client/: Cargo.toml  README.md
Rust/tokio-chat-client/: Enarx.toml
Rust/tokio-chat-client/src/: main.rs
Rust/tokio-chat-server/: Cargo.toml  Enarx.toml
Rust/tokio-chat-server/src/: main.rs
Rust/tokio-echo/: Cargo.toml  README.md
Rust/tokio-echo-tcp/: Cargo.toml  Enarx.toml  README.md
Rust/tokio-echo-tcp/src/: main.rs
Rust/tokio-echo/.cargo/: config
Rust/tokio-echo/src/: main.rs
Rust/tokio-http/: Cargo.toml  Enarx.toml  README.md
Rust/wasi_tokio_httpd/: Cargo.toml  Enarx.toml
Rust/wasi_tokio_httpd/.cargo/: config
Rust/wasi_tokio_httpd/src/: Enarx.toml  main.rs  protocol.rs
Swift/: README.md
Swift/fibonacci/: fibonacci.swift
TypeScript/: README.md
Zig/: README.md
Zig/fibonacci/: main.zig
Zig/fibonacci/src/: main.zig
demos/: README.md
demos/chat-client/: Enarx.toml
demos/chat-client/c/: main.c
demos/chat-client/c++/: Enarx.toml  README.md  assets.h  compile_run.sh  main.cpp  process_assets.py
demos/chat-client/c++/assets/: chat.html  (+3 more)
demos/chat-client/chat-web-ui/: README.md  index.html  script.js  style.css
demos/chat-client/rust/: Cargo.toml  Enarx.toml
demos/chat-client/web-ui/: index.html  script.js  style.css
demos/chat-server/rust/: Cargo.toml
demos/chatclient/rust/: Cargo.toml
demos/fibonacci/c/: fibonacci.c
demos/fibonacci/c++/: fibonacci.cpp
demos/fibonacci/go/: go.mod
demos/fibonacci/grain/: fibonacci.gr
demos/fibonacci/java/: README.md
demos/fibonacci/swift/: fibonacci.swift
demos/fibonacci/typescript/: index.ts
demos/fibonacci/zig/: build.zig
examples/: README.md
examples/assemblyscript/: README.md
examples/go/: README.md
examples/ruby/: README.md
examples/rust/: README.md
examples/rust/tokio/echo-tcp/: Cargo.toml
examples/rust/tokio/http/: Cargo.toml  Enarx.toml  README.md
examples/rust/tokio/http/src/: date.rs  index.html
tests/: run.sh
tests/benchmark/: plot.py
tests/fibonacci/golden/: default  stdin
(+6 files in other folders)
