[package]
name = "tokio-echo-tcp"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", default-features = false, features = ["net", "rt", "macros", "io-util", "io-std"] }
